Fix footer icons being misaligned at small widths

--- a/cmd/serve/assets/stylesheet/footer.css
+++ b/cmd/serve/assets/stylesheet/footer.css
@@ -114,5 +114,9 @@ body > footer {
         fill: var(--link-colour);
       }
     }
+
+    @media (max-width: 1000px) {
+      justify-content: left;
+    }
   }
 }
